--- a/style.css
+++ b/style.css
@@ -184,28 +184,25 @@ button {
 
 .item-1-1 {
     grid-area: 1/1/1/1;
-    border: 1px solid white;
     display: grid;
-    grid-template-columns: 300px;
-    grid-template-rows: 150px 150px;
+    grid-template-columns: 200px;
+    grid-template-rows: 60px 60px;
     margin-top: 1em;
 }
 
 .item-2-1 {
     grid-area: 1/2/1/2;
-    border: 1px solid white;
     display: grid;
     grid-template-columns: 300px;
-    grid-template-rows: 150px 150px;
+    grid-template-rows: 60px 60px 60px 60px;
     margin-top: 1em;
 }
 
 .item-3-1 {
     grid-area: 1/3/1/3;
-    border: 1px solid wheat;
     display: grid;
     grid-template-columns: 300px;
-    grid-template-rows: 150px 150px;
+    grid-template-rows: 60px 30px 60px 30px 60px;
     margin-top: 1em;
 }
 
@@ -218,15 +215,58 @@ button {
 }
 
 .support-2 {
+    grid-area: 2/1/2/1;
     font-size: 1.2em;
     text-align: center;
     margin-top: 10px;
-    color: white;
+    color: rgb(160, 160, 160);
 }
 
 .support-3 {
+    grid-area: 3/1/3/1;
     font-size: 1.2em;
     text-align: center;
     margin-top: 10px;
+    color: rgb(160, 160, 160);
+}
+
+.support-4 {
+    grid-area: 4/1/4/1;
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(160, 160, 160);
+}
+
+.support-5 {
+    grid-area: 5/1/5/1;
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(160, 160, 160);
+}
+
+.support-6 {
+    grid-area: 6/1/6/1;
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(160, 160, 160);
+}
+
+.support-7 {
+    grid-area: 7/1/7/1;
+    font-size: 1.2em;
+    text-align: center;
+    color: rgb(160, 160, 160);
+}
+
+.nomer {
+    color: yellow;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.white {
     color: white;
 }
